Add JUnit 5 and WIP: directory groupings